hero gap problem solve

--- a/Component/Hero/hero.css
+++ b/Component/Hero/hero.css
@@ -6,8 +6,6 @@
     width: 100%;
     display: flex;
     align-items: center;
-    margin-top: 50px;
-  
 }
 .hero-container{
     width: 80%;
